--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <title>About Me - Andrew Schimelpfening</title>
     <meta charset="utf-8">
@@ -9,39 +10,39 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <div class="container">
-        <span class="navbar-brand">727021</span>
-        <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
-            aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="collapsibleNavId">
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item active">
-                    <a class="nav-link" href="index.html"><i class="fas fa-user"></i> About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="projects.html"><i class="fas fa-list-ul"></i> Projects</a>
-                </li>
-                <li class="nav-item">
-                    <a href="resume.html" class="nav-link"><i class="fas fa-scroll"></i> Resume</a>
-                </li>
-                <li class="nav-item">
-                    <a target="_blank" href="https://github.com/727021" class="nav-link"><i class="fab fa-github"></i> GitHub</a>
-                </li>
-                <li class="nav-item">
-                    <a target="_blank" href="https://linkedin.com/in/andrewschim" class="nav-link"><i class="fab fa-linkedin"></i> LinkedIn</a>
-                </li>
-            </ul>
-        </div>
+            <span class="navbar-brand">727021</span>
+            <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="collapsibleNavId">
+                <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="index.html"><i class="fas fa-user"></i> About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="projects.html"><i class="fas fa-list-ul"></i> Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="resume.html" class="nav-link"><i class="fas fa-scroll"></i> Resume</a>
+                    </li>
+                    <li class="nav-item">
+                        <a target="_blank" href="https://github.com/727021" class="nav-link"><i class="fab fa-github"></i> GitHub</a>
+                    </li>
+                    <li class="nav-item">
+                        <a target="_blank" href="https://linkedin.com/in/andrewschim" class="nav-link"><i class="fab fa-linkedin"></i> LinkedIn</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
     <div class="container">
         <h1 class="display-4">About Me</h1>
         <img src="me.png" width="200px" height="200px" alt="" class="rounded-circle border float-md-left border-dark mx-auto mr-md-4 d-block d-md-inline">
-        <p class="lead">I'm <b>Andrew Schimelpfening</b>, a junior at BYU-Idaho. I'm pursuing a B.S. in Computer Science, and I'm loving what I'm learning. This site is where I showcase some of the <a href="projects.html">projects</a> I'm most proud of and provide a copy of my current <a href="resume.html">resume</a>.</p>
+        <p class="lead">I'm <b>Andrew Schimelpfening</b>, a senior at BYU-Idaho. I'm pursuing a B.S. in Computer Science, and I'm loving what I'm learning. This site is where I showcase some of the <a href="projects.html">projects</a> I'm most proud of and provide a copy of my current <a href="resume.html">resume</a>.</p>
         <p>I first started programming in middle school, when I found some online C# tutorials and decided I loved writing code. Since then, I have worked with Java, C++, PHP, NodeJS, Emacs Lisp, and various SQL varieties. I'm currently seeking an internship, and I look forward to a career in software development or a related field. I hope to be able to use my skills and talents to create products that will help others. If you'd like to contact me, I can be reached at <a href="mailto:andrewschim@gmail.com" target="_blank">andrewschim@gmail.com</a>.</p>
     </div>
 
@@ -49,4 +50,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
+
 </html>
