--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <title>Projects - Andrew Schimelpfening</title>
     <meta charset="utf-8">
@@ -9,33 +10,33 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <div class="container">
-        <span class="navbar-brand">727021</span>
-        <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
-            aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="collapsibleNavId">
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html"><i class="fas fa-user"></i> About</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="projects.html"><i class="fas fa-list-ul"></i> Projects</a>
-                </li>
-                <li class="nav-item">
-                    <a href="resume.html" class="nav-link"><i class="fas fa-scroll"></i> Resume</a>
-                </li>
-                <li class="nav-item">
-                    <a target="_blank" href="https://github.com/727021" class="nav-link"><i class="fab fa-github"></i> GitHub</a>
-                </li>
-                <li class="nav-item">
-                    <a target="_blank" href="https://linkedin.com/in/andrewschim" class="nav-link"><i class="fab fa-linkedin"></i> LinkedIn</a>
-                </li>
-            </ul>
-        </div>
+            <span class="navbar-brand">727021</span>
+            <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="collapsibleNavId">
+                <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html"><i class="fas fa-user"></i> About</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="projects.html"><i class="fas fa-list-ul"></i> Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="resume.html" class="nav-link"><i class="fas fa-scroll"></i> Resume</a>
+                    </li>
+                    <li class="nav-item">
+                        <a target="_blank" href="https://github.com/727021" class="nav-link"><i class="fab fa-github"></i> GitHub</a>
+                    </li>
+                    <li class="nav-item">
+                        <a target="_blank" href="https://linkedin.com/in/andrewschim" class="nav-link"><i class="fab fa-linkedin"></i> LinkedIn</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
     <div class="container mb-2">
@@ -55,4 +56,5 @@
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script><!-- For markdown in project descriptions -->
     <script src="projects.js"></script>
 </body>
+
 </html>
